@@ -21,18 +21,10 @@
 PATH=/usr/local/sbin:/usr/local/bin:/sbin:/bin:/usr/sbin:/usr/bin
 DESC="BitTorrent service for"
 
-# lmn specific paths
-# lmn7
-if [ -d /usr/share/linuxmuster/linbo ]; then
- source /usr/share/linuxmuster/defaults.sh || exit 1
-#lmn6x
-elif [ -d /usr/share/linuxmuster-linbo ]; then
-  source /usr/share/linuxmuster/config/dist.conf || exit 1
-else
-  exit 1
-fi
+# lmn6 specific paths
+. /usr/share/linuxmuster/config/dist.conf || exit 1
 DAEMON=$LINBOSHAREDIR/linbo-torrenthelper.sh
-source $LINBOSHAREDIR/helperfunctions.sh || exit 1
+. $LINBOSHAREDIR/helperfunctions.sh || exit 1
 
 # Gracefully exit if the package has been removed.
 test -x $DAEMON || exit 0
@@ -64,9 +56,9 @@ MAX_SLICE_LENGTH=131072
 CLIENT_CONFIG="torrent-client.conf"
 
 # get daemon default settings and exit if
-[ -e /etc/default/linbo-bittorrent ] && source /etc/default/linbo-bittorrent
+[ -e /etc/default/linbo-bittorrent ] && . /etc/default/linbo-bittorrent
 [ "$START_BITTORRENT" = "1" ] || exit 0
-source /etc/default/bittorrent || exit 1
+. /etc/default/bittorrent || exit 1
 [ "$START_BTTRACK" = "1" ] || exit 0
 
 cd $LINBODIR
