@@ -1,1 +1,1 @@
-LINBO 2.3.42-0
+LINBO 2.3.42-1
